tdf#118949 don't set zero auto top margin in every first paragraph

of sections, only in table cells.

Partially revert of the commit 0307a62790b33ee0c02c2323a8f759e53e2035a4.

Change-Id: I1daf1bc49ce1acf42a55857c1b6b92c7cbcb8e00