writerfilter/source/dmapper/DomainMapper.cxx
@@ -655,8 +655,8 @@ void DomainMapper::lcl_attribute(Id nName, Value & val)
                     default_spacing = 49;
                 else
                 {
-                    // tdf#104354, tdf#118533 first paragraph of sections and shapes got zero top margin
-                    if ((m_pImpl->GetIsFirstParagraphInSection() && !m_pImpl->IsInShape()) ||
+                    // tdf#104354 first paragraphs of table cells and shapes get zero top margin
+                    if ((m_pImpl->GetIsFirstParagraphInSection() && !m_pImpl->IsInShape() && m_pImpl->m_nTableDepth > 0) ||
                          m_pImpl->GetIsFirstParagraphInShape())
                         default_spacing = 0;
                     else
