sw/qa/extras/rtfexport/rtfexport.cxx
@@ -982,8 +982,8 @@ DECLARE_RTFEXPORT_TEST(testNumOverrideStart, "num-override-start.rtf")
 DECLARE_RTFEXPORT_TEST(testFdo82006, "fdo82006.rtf")
 {
     // These were 176 (100 twips), as \sbauto and \sbbefore were ignored.
-    // Exception: first paragraph gets zero top margin, see also tdf#104354.
-    CPPUNIT_ASSERT_EQUAL(sal_Int32(convertTwipToMm100(0)),
+    // FIXME Exception: first paragraph gets zero top margin, see tdf#118533.
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(convertTwipToMm100(280)),
                          getProperty<sal_Int32>(getParagraph(1), "ParaTopMargin"));
     CPPUNIT_ASSERT_EQUAL(sal_Int32(convertTwipToMm100(280)),
                          getProperty<sal_Int32>(getParagraph(1), "ParaBottomMargin"));
@@ -1425,8 +1425,8 @@ DECLARE_RTFEXPORT_TEST(testTdf112507, "tdf112507.rtf")
 DECLARE_RTFEXPORT_TEST(testTdf107480, "tdf107480.rtf")
 {
     // These were 176 (100 twips), as \htmautsp was parsed too late.
-    // Exception: first paragraph gets zero top margin, see also tdf#104354.
-    CPPUNIT_ASSERT_EQUAL(sal_Int32(convertTwipToMm100(0)),
+    // FIXME Exception: first paragraph gets zero top margin, see tdf#118533.
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(convertTwipToMm100(280)),
                          getProperty<sal_Int32>(getParagraph(1), "ParaTopMargin"));
     CPPUNIT_ASSERT_EQUAL(sal_Int32(convertTwipToMm100(280)),
                          getProperty<sal_Int32>(getParagraph(1), "ParaBottomMargin"));
